// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute crypto endpoint should return success 1`] = `
{
  "data": {
    "result": 4539.44,
  },
  "result": 4539.44,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`execute eod endpoint should return success 1`] = `
{
  "data": {
    "result": 48.77,
  },
  "result": 48.77,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`execute stock endpoint should return success 1`] = `
{
  "data": {
    "result": 48.77,
  },
  "result": 48.77,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;
